--- a/QuanLyTaiKhoan/QuanLyTaiKhoan/QuanLyTaiKhoan.csproj
+++ b/QuanLyTaiKhoan/QuanLyTaiKhoan/QuanLyTaiKhoan.csproj
@@ -54,6 +54,7 @@
     <Compile Include="DAO\DataProvider.cs" />
     <Compile Include="DAO\DichvuLaisuatDAO.cs" />
     <Compile Include="DAO\PhieuGuiDAO.cs" />
+    <Compile Include="DAO\PhieuRutDAO.cs" />
     <Compile Include="DAO\ServiceDAO.cs" />
     <Compile Include="DAO\StaffDAO.cs" />
     <Compile Include="DTO\Account.cs" />
@@ -135,8 +136,14 @@
     <EmbeddedResource Include="SubForm\FormGuiTien.resx">
       <DependentUpon>FormGuiTien.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="SubForm\FormService.resx">
+      <DependentUpon>FormService.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SubForm\FormStaffs.resx">
       <DependentUpon>FormStaffs.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SubForm\FormStatistical.resx">
+      <DependentUpon>FormStatistical.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Trang chủ.resx">
       <DependentUpon>Trang chủ.cs</DependentUpon>
@@ -155,6 +162,34 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <COMReference Include="Microsoft.Office.Core">
+      <Guid>{2DF8D04C-5BFA-101B-BDE5-00AA0044DE52}</Guid>
+      <VersionMajor>2</VersionMajor>
+      <VersionMinor>8</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
+    <COMReference Include="Microsoft.Office.Interop.Excel">
+      <Guid>{00020813-0000-0000-C000-000000000046}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>9</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
+    <COMReference Include="VBIDE">
+      <Guid>{0002E157-0000-0000-C000-000000000046}</Guid>
+      <VersionMajor>5</VersionMajor>
+      <VersionMinor>3</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
